[gd_scene load_steps=5 format=3 uid="uid://dq6tvhqcy2aps"]

[ext_resource type="Script" uid="uid://5xgyj7oh4yq" path="res://addons/EasyMenus/Scripts/main_menu_controller.gd" id="1_lbw7r"]
[ext_resource type="Theme" uid="uid://c2hsc8v50myw" path="res://themes/menu.tres" id="2_f4gee"]
[ext_resource type="PackedScene" uid="uid://qlskttl1wjr7" path="res://addons/EasyMenus/Scenes/options_menu.tscn" id="2_pwqpr"]
[ext_resource type="AudioStream" uid="uid://ceuxw7s21g4jr" path="res://audio/Royalty Free Medieval Music - _Marked_ by Alexander Nakarada.mp3" id="4_bcxwf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lbw7r")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_f4gee")

[node name="Content" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -337.0
offset_top = 278.0
offset_right = 317.0
offset_bottom = 1006.0
grow_horizontal = 2
theme_override_constants/separation = 15
metadata/_edit_group_ = true

[node name="Title" type="Label" parent="Content"]
layout_mode = 2
theme = ExtResource("2_f4gee")
text = "Elinhavn"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PrologueButton" type="Button" parent="Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../QuitButton")
theme = ExtResource("2_f4gee")
theme_override_font_sizes/font_size = 30
text = "Prologue"

[node name="Control" type="Control" parent="Content"]
layout_mode = 2

[node name="Control2" type="Control" parent="Content"]
layout_mode = 2

[node name="Control3" type="Control" parent="Content"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../QuitButton")
theme = ExtResource("2_f4gee")
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="OptionsButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../StartGameButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../StartGameButton")
theme = ExtResource("2_f4gee")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="QuitButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../StartGameButton")
focus_next = NodePath("../StartGameButton")
focus_previous = NodePath("../OptionsButton")
theme = ExtResource("2_f4gee")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("2_pwqpr")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_bcxwf")
autoplay = true

[connection signal="pressed" from="Content/PrologueButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="Content/PrologueButton" to="." method="_on_prologue_button_pressed"]
[connection signal="pressed" from="Content/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="Content/OptionsButton" to="." method="open_options"]
[connection signal="pressed" from="Content/QuitButton" to="." method="quit"]
[connection signal="close" from="OptionsMenu" to="." method="close_options"]
